# agentic-ai

./: .env  .env.example  .env.example.com  lib.txt  main.py  memory.db  pyproject.toml  readme.md
01_python/: readme.md
02-ai-terminologies/: readme.md
02_ai_theory/: stanford_cs229_building_llms.md
03-fastapi/: 01_hello_world.py  03_routing_concepts.py  04_middleware.py  readme.md
03_fastapi/: 02_routing_basics.py  03_routing_concepts.py  03_routing_groups.py  05_file_handling.py  06_custom_exceptions.py  10_todo_app_postgress.py
03_fastapi/folder_standard/: main.py
04_databases/: api_key_authentication.md  db_relationships.md  email_password_authentication.md  readme.md  sql_queries.txt
04_databases/02_fast_api_postgress/: alembic.ini  main.py  readme.md
05_data_preprocessing/: 01_numpy.md  01_numpy.py  02_padas.md  02_pandas.md  02_pandas.py  03_opencv.md  03_opencv.py  04_nlkt.py  04_nltk.md  04_scikit_learn.md  padas.md  readme.md
06_model_development/: cat_dog_model.py  fastapi_pridiction_model.py  mnist.py  predict_cat_dog.model.py  readme.md  test_data_script.py
07-llm-and-prompt-engineering/: 02_gemeni_llm_stream.py  03_llm_settings.py  04_basics_of_prompting.py  README.md
07-llm-and-prompt-engineering/03-prompting-techniques/: chain_of_thought.py
07-llm-and-prompt-engineering/basics_of_prompting/: 02_gemeni_llm_stream.py  03_prompt_elements.py
07-llm-and-prompt-engineering/prompting_techniques/: few_shot.py  meta_prompting.py  zero_shot.py
07_llm_and_prompt_engineering/: README.md
08-langchain/: README.md  langchain_chains.py
08_openai-agent-sdk/: 01_basic_agent.py  04a_agent_tools_example_todos_json_app.py  04c_agent_tool_github.py  08_history_management.py  agent_with_dapr.py  basic_agent.py  pyproject.toml  todo_agent.py  todos.json
08_openai-agent-sdk/01_agents/: 01_basic_configuration.py  02_context.py  03_output_types.py  04_handoffs.py  (+4 more)
08_openai-agent-sdk/examples/weather_agent/: .env.example  LICENSE  README.md  agent.py  pyproject.toml
09-langgraph/: langraph_openai_agentic_rag_fastapi.py  long_term_memory_sqlite.py  onboarding.py  streamlit_onborading.py
09_langchain/: 07_gemeni_rag.py
09_langgraph/: 07_short_term_memory_mongodb_persist.py  16_langraph_quiz_app.py
09a_langgraph/: 05_langraph_fastApi.py  06_short_term_inmemory.py
10_crewai/: 02_crewai_flow.py  03_crewai_state.py  04_crewai_flow_control.py  05_crewai_router.py  06_crewai_crew_in_flow.py  08_blog_post_generation_flow.py  11_and_flow.py  12_and_real_example.py  13_or_flow.py  14_or_real_example.py  fun_fact_flow.py  structured_state_flow.py  unstructured_state_flow.py  window-install.txt
12_frontend/: readme.md
db-agent/: db_agent.py
langchain/: 01_langchain_prompts.py  langchain_memory.py  pyproject.toml
langgraph/: 03Langraph_memory.py  Command.py  langgraph_chain.py  langgraph_module0.py  langgraph_module1.py  long_term_memory.py  long_term_memory_monogdb_persist.py
llm/: 01_langchain_gemeni_llm.py  02_llm_gemeni.py  pyproject.toml
openai-agent-sdk/: 03_structured_output.py  04_function_tools_agent.py
payment-agent/: readme.md
rag/: langraph_gemeni_agentic_rag.py
websocket-agent/: ws_agent-gemini.py
(+71 files in other folders)
