[project]
name = "agentic-ai"
version = "0.1.0"
description = ""
authors = [
    {name = "devnaveedsarwar",email = "learnwithnaveedsarwar@gmail.com"}
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain-core = "^0.2.29"
langchain-community = "^0.2.11"
langchain-openai = "^0.1.21"
python-dotenv = "^1.0.1"
langchain-google-genai = "^1.0.9"
langchain-google-vertexai = "^1.0.8"
huggingface-hub = "^0.24.5"
transformers = "^4.44.0"
langchain-huggingface = "^0.0.3"
bs4 = "^0.0.2"
langchain-chroma = "^0.1.3"
faiss-cpu = "^1.8.0.post1"
langchainhub = "^0.1.21"
langgraph = "^0.2.26"
sqlmodel = "^0.0.22"
psycopg2-binary = "^2.9.10"
psycopg = "^3.2.3"
psycopg-binary = "^3.2.3"
streamlit = "^1.41.1"
pymongo = "^4.9.2"
langgraph-checkpoint="2.0.9"
langgraph-checkpoint-mongodb="0.1.0"
fastapi = {extras = ["standard"], version = "^0.115.6"}
uvicorn = "^0.34.0"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
