[project]
name = "agentic-ai"
requires-python = ">=3.11"
version = "0.1.0"
description = "agentic AI course repo"
authors = [
    {name = "devnaveedsarwar",email = "learnwithnaveedsarwar@gmail.com"}
]
readme = "README.md"
dependencies = [
    "crewai[tools]>=0.100.1,<0.101.0",
    "langchain-community>=0.3.16",
    "langchain>=0.3.17,<0.4.0",
    "langchain-core>=0.3.33,<0.4.0",
    "langchain-openai>=0.2.14",
    "python-dotenv>=1.0.1",
    "langchain-google-genai>=2.0.9",
    "fastapi>=0.115.8",
    "uvicorn>=0.34.0",
    "pymongo>=4.11",
    "langgraph>=0.2.69",
    "streamlit>=1.41.1",
    "python-multipart>=0.0.20",
    "crewai-tools>=0.33.0",
    "alembic>=1.14.1",
    "psycopg2-binary>=2.9.10",
    "docling>=2.25.0",
    "pyjwt>=2.10.1",
    "passlib>=1.7.4",
    "numpy>=1.26.4",
    "matplotlib>=3.10.1",
    "pandas>=2.2.3",
    "opencv-python>=4.11.0.86",
    "nltk>=3.9.1",
    "openai-agents>=0.0.6",
    "tensorflow>=2.14.0",
]

[tool.uv.workspace]
members = ["openai-agent-sdk"]
